Correct error in today's blog

--- a/src/pages/posts/2025-04-03.md
+++ b/src/pages/posts/2025-04-03.md
@@ -11,7 +11,7 @@ tags: ["New York", "Los Angeles", "Colorado", "Road trip", "Near death experienc
 ---
 I almost died in L.A.
 
-No, that’s no hyperbole. That actually happened. I’m going to tell you the story but I’m going to change some of the names. This isn’t one of those scandalous tell-alls. This is just a story that happened to me. And I don’t need to be airing other peoples dirty laundry.
+No, that’s not hyperbole. That actually happened. I’m going to tell you the story but I’m going to change some of the names. This isn’t one of those scandalous tell-alls. This is just a story that happened to me. And I don’t need to be airing other peoples dirty laundry.
 
 You’ll need to take a trip with me in the way-back-machine to 1994. It was winter and I was working as an associate manager at a [Village Inn](https://www.villageinn.com) in a suburb of Denver, Colorado. A job that I absolutely hated. 
 
