--- a/src/pages/posts/2025-03-31.md
+++ b/src/pages/posts/2025-03-31.md
@@ -1,7 +1,7 @@
 ---
 layout: ../../layouts/MarkdownPostLayout.astro
 title: "Tim, Fifi, and the long, queer road to recovery"
-pubDate: 2025-03-31
+pubDate: 2025, 03, 31
 description: "What do you do with 14 years of sobriety, a failed t-shirt business, and a need to connect with people? Start a blog."
 author: "Max Phillips"
 image:
