--- a/src/pages/posts/2025-04-01.md
+++ b/src/pages/posts/2025-04-01.md
@@ -1,7 +1,7 @@
 ---
 layout: ../../layouts/MarkdownPostLayout.astro
 title: Write your story and let it take you where it will
-pubDate: 2025-04-01
+pubDate: 2025, 04, 01
 description: Life is a lot like writing. You don't always know where you're going to end up when you set out. But sometimes you're pleasantly  surprised at the outcome.
 author: Max Phillips
 image: 
