--- a/src/pages/posts/2025-04-03.md
+++ b/src/pages/posts/2025-04-03.md
@@ -1,7 +1,7 @@
 ---
 layout: ../../layouts/MarkdownPostLayout.astro
 title: "Hotel California and the early checkout"
-pubDate: 2025-04-03
+pubDate: 2025, 04, 03
 description: "It was suppsed to be the trip of a lifetime. Not every story has a happy ending."
 author: "Max Phillips"
 image:
@@ -9,6 +9,7 @@ image:
   alt: "" 
 tags: ["New York", "Los Angeles", "Colorado", "Road trip", "Near death experience"]
 ---
+
 I almost died in L.A.
 
 No, that’s not hyperbole. That actually happened. I’m going to tell you the story but I’m going to change some of the names. This isn’t one of those scandalous tell-alls. This is just a story that happened to me. And I don’t need to be airing other peoples dirty laundry.
