--- a/src/pages/posts/2025-04-02.md
+++ b/src/pages/posts/2025-04-02.md
@@ -1,7 +1,7 @@
 ---
 layout: ../../layouts/MarkdownPostLayout.astro
 title: "Fifi has a voice and so do you"
-pubDate: 2025-04-02
+pubDate: 2025, 04, 02
 description: "Now is the time to stand up, stand out, and tell your story."
 author: "Max Phillips"
 image:
