fixed date issue

--- a/src/pages/posts/2025-03-31.md
+++ b/src/pages/posts/2025-03-31.md
@@ -7,7 +7,7 @@ author: "Max Phillips"
 image:
   url: ""
   alt: ""
-tags: ["recovery", "queer", "sobriety", "LGBTQ"]
+tags: ["recovery", "queer", "sobriety", "LGBTQ", "journaling"]
 ---
 
 Tim told me to write a blog, post it online, and don’t tell anyone. 
