--- a/src/pages/posts/2025-04-01.md
+++ b/src/pages/posts/2025-04-01.md
@@ -7,7 +7,7 @@ author: Max Phillips
 image: 
   url: ""
   alt: ""
-tags: ["Colombia", "Writing", "Grindr"]
+tags: ["Colombia", "writing", "Grindr"]
 ---
 I hate days like this.
 
