--- a/src/pages/posts/2025-04-05.md
+++ b/src/pages/posts/2025-04-05.md
@@ -7,7 +7,7 @@ author: "Max Phillips"
 image:
   url: ""
   alt: "" 
-tags: ["AA", "Recovery", "Writing", "Journaling"]
+tags: ["AA", "recovery", "writing", "journaling"]
 ---
 I just saw a TikTok of [Trixie Mattel](https://www.trixiemattel.com/) asking [Kata](https://welovekatya.com/), “What do you think of people who wake up really early and journal?” That’s literally me. It’s 5 am and I’m here with my coffee.
 
