--- a/src/pages/posts/2025-04-03.md
+++ b/src/pages/posts/2025-04-03.md
@@ -7,7 +7,7 @@ author: "Max Phillips"
 image:
   url: ""
   alt: "" 
-tags: ["New York", "Los Angeles", "Colorado", "Road trip", "Near death experience"]
+tags: ["New York", "Los Angeles", "Colorado", "road trip", "near death experience"]
 ---
 
 I almost died in L.A.
