Turned off smarty pants md formatter.  Edits to Blog

--- a/src/pages/posts/2025-04-01.md
+++ b/src/pages/posts/2025-04-01.md
@@ -17,7 +17,7 @@ That’s what I’m doing today. I have no plan, no direction. I’m just writin
 
 I suppose, in a way, that’s how I ended up in Colombia. (See, I told you this would be [a story for another day](/posts/2025-03-31).) But, where to begin? The day I got on the plane? No not enough context. The day I said goodbye to Andrés and promised him I’d come to Colombia? Maybe. But maybe you need just a smidge *more* context.
 
-I was living in Lancaster, Pennsylvania. I had been there for 13 years by this time. I hate to do this to you, but the circumstances of how I ended up there is—again—a story for another day.
+I was living in Lancaster, Pennsylvania. I had been there for 13 years by this time. I hate to do this to you, but the circumstances of how I ended up there is——again——a story for another day.
 
 I was recently single, and on the very last day of my first professional theater performance. (And my last, as of this writing.) 
 
