--- a/src/content/blog/2025-04-07.md
+++ b/src/content/blog/2025-04-07.md
@@ -7,7 +7,7 @@ author: "Max Phillips"
 image:
   url: ""
   alt: "" 
-tags: ["wealth", "money", ]
+tags: ["wealth", "money"]
 ---
 Well, the world markets are in free fall. It seems Dumpy Dump got his wish. These tariffs he’s imposing on every country—except his buddy in Russia, of course—are causing investors to panic and sell everything. I’m no financial expert, but I guess that’s what’s happening. I’m hearing rumors that this is going to be worse than the recession of ‘08. 
 
