updates to blog metadata | added 404 page | deprecated formatDate.ts | added notes (todo list)

--- a/src/content/blog/2025-04-01.md
+++ b/src/content/blog/2025-04-01.md
@@ -1,12 +1,9 @@
 ---
-layout: ../../layouts/MarkdownPostLayout.astro
 title: Write your story and let it take you where it will
 pubDate: 2025, 04, 01
 description: Life is a lot like writing. You don't always know where you're going to end up when you set out. But sometimes you're pleasantly  surprised at the outcome.
-author: Max Phillips
-image: 
-  url: ""
-  alt: ""
+heroImage: ""
+heroAlt: ""
 tags: ["Colombia", "writing", "Grindr"]
 ---
 I hate days like this.
