--- a/src/content/blog/2025-04-02.md
+++ b/src/content/blog/2025-04-02.md
@@ -1,12 +1,9 @@
 ---
-layout: ../../layouts/MarkdownPostLayout.astro
 title: "Fifi has a voice and so do you"
 pubDate: 2025, 04, 02
 description: "Now is the time to stand up, stand out, and tell your story."
-author: "Max Phillips"
-image:
-  url: ""
-  alt: ""
+heroImage: ""
+heroAlt: ""
 tags: ["writing", "queer", "LGBTQ"]
 ---
 
