--- a/src/content/blog/2025-04-03.md
+++ b/src/content/blog/2025-04-03.md
@@ -1,12 +1,9 @@
 ---
-layout: ../../layouts/MarkdownPostLayout.astro
 title: "Hotel California and the early checkout"
 pubDate: 2025, 04, 03
 description: "It was suppsed to be the trip of a lifetime. Not every story has a happy ending."
-author: "Max Phillips"
-image:
-  url: ""
-  alt: "" 
+heroImage: ""
+heroAlt: "" 
 tags: ["New York", "Los Angeles", "Colorado", "road trip", "near death experience"]
 ---
 
