--- a/src/content/blog/2025-04-05.md
+++ b/src/content/blog/2025-04-05.md
@@ -1,12 +1,9 @@
 ---
-layout: ../../layouts/MarkdownPostLayout.astro
 title: "Journal your way to better mental health"
 pubDate: 2025, 04, 05
 description: "I can't promise it will fix all your ills, but a regular writing habit is actually good for you."
-author: "Max Phillips"
-image:
-  url: ""
-  alt: "" 
+heroImage: ""
+heroAlt: "" 
 tags: ["AA", "recovery", "writing", "journaling"]
 ---
 I just saw a TikTok of [Trixie Mattel](https://www.trixiemattel.com/) asking [Kata](https://welovekatya.com/), “What do you think of people who wake up really early and journal?” That’s literally me. It’s 5 am and I’m here with my coffee.
