--- a/src/content/blog/2025-04-07.md
+++ b/src/content/blog/2025-04-07.md
@@ -1,12 +1,9 @@
 ---
-layout: ../../layouts/MarkdownPostLayout.astro
 title: "Rich man, poor man, and a wealth of knowledge"
 pubDate: 2025, 04, 07
 description: "Know the difference between being rich and wealthy? For a long time I didn't. I'm still not sure that I do."
-author: "Max Phillips"
-image:
-  url: ""
-  alt: "" 
+heroImage: ""
+heroAlt: "" 
 tags: ["wealth", "money"]
 ---
 Well, the world markets are in free fall. It seems Dumpy Dump got his wish. These tariffs he’s imposing on every country—except his buddy in Russia, of course—are causing investors to panic and sell everything. I’m no financial expert, but I guess that’s what’s happening. I’m hearing rumors that this is going to be worse than the recession of ‘08. 
