Updated set up to include pushes from Obsidian to blog

--- a/src/content/blog/2025-04-02.md
+++ b/src/content/blog/2025-04-02.md
@@ -1,6 +1,6 @@
 ---
 title: "Fifi has a voice and so do you"
-pubDate: 2025, 04, 02
+pubDate: 2025-04-02
 description: "Now is the time to stand up, stand out, and tell your story."
 heroImage: ""
 heroAlt: ""
