--- a/src/content/blog/2025-04-03.md
+++ b/src/content/blog/2025-04-03.md
@@ -1,6 +1,6 @@
 ---
 title: "Hotel California and the early checkout"
-pubDate: 2025, 04, 03
+pubDate: 2025-04-03
 description: "It was suppsed to be the trip of a lifetime. Not every story has a happy ending."
 heroImage: ""
 heroAlt: "" 
