--- a/src/content/blog/2025-04-05.md
+++ b/src/content/blog/2025-04-05.md
@@ -1,6 +1,6 @@
 ---
 title: "Journal your way to better mental health"
-pubDate: 2025, 04, 05
+pubDate: 2025-04-05
 description: "I can't promise it will fix all your ills, but a regular writing habit is actually good for you."
 heroImage: ""
 heroAlt: "" 
