--- a/src/content/blog/2025-04-10.md
+++ b/src/content/blog/2025-04-10.md
@@ -2,10 +2,7 @@
 title: Choices, the prisons of our own making
 pubDate: 2025-04-10T11:43:52.187Z
 description: We always have the choice to do something different. Even it that choice is difficult.
-tags:
-    - choices
-    - dreams
-    - consequences
+tags: ["choices", "dreams", "consequences"]
 ---
 I had another strange dream last night. I was in some sort of prison, but it was more like a screened-in porch than a cell. I was standing near the edge of the left wall, carving my name in a bottle cap or something like that. I was working on one side (maybe the inside?) and I realized I had gone too deep. So I flipped it over and worked smaller on the other side. 
 
