--- a/src/content/blog/2025-03-31.md
+++ b/src/content/blog/2025-03-31.md
@@ -1,6 +1,6 @@
 ---
 title: "Tim, Fifi, and the long, queer road to recovery"
-pubDate: 2025, 03, 31
+pubDate: 2025-03-31
 description: "What do you do with 14 years of sobriety, a failed t-shirt business, and a need to connect with people? Start a blog."
 heroImage: ""
 heroAlt: ""
